# KiroDSStarAgent

./: .env.example  .gitignore  README.md  code.html  pyproject.toml  requirements.txt  start_application.bat  start_backend.bat  strands_example.py
.kiro/hooks/: code-quality-analyzer.kiro.hook  update-docs-on-change.kiro.hook
.kiro/specs/ds-star-frontend/: design.md  requirements.md  tasks.md
HelloAgent/: .bedrock_agentcore.yaml  README.md  pyproject.toml  requirements.txt
HelloAgent/src/: __init__.py  main.py
data/: airline_operations.csv
demo/: README.md  run_demo.py  sample_queries.md
docs/: README.md  agent-flow.html  architecture.html  data-storage.md  functional-spec.html  index.html  prd.html  project-management.html  tech-ops-implementation-backlog.md  technical-spec.html
examples/: strands_hello_agent.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
src/: __init__.py  config.py  main.py  models.py
src/agents/: orchestrator.py
src/api/: __init__.py  server.py
src/data/: __init__.py  airline_data.py  generate_sample_data.py  techops_metrics.py
src/handlers/: README.md  __init__.py  chart_handler.py  error_handler.py  retry_handler.py  stream_handler.py
src/llm/: __init__.py  ollama_client.py
src/spc/: __init__.py  wheeler.py
src/techops/: __init__.py  investigation_tests.py
tests/: conftest.py  test_config.py  test_error_handling.py  test_main.py  test_orchestrator.py  test_specialists.py  test_stream_handler.py
(+64 files in other folders)
